# streamdeck-lib

./: Cargo.toml  README
src/: action_manager.rs  actions.rs  adapters.rs  adapters_manager.rs  bus.rs  context.rs  events.rs  hooks.rs  launch.rs  lib.rs  logger.rs  plugin.rs  plugin_builder.rs  runtime.rs  sd_protocol.rs
src/input/: dsl.rs  key.rs  mod.rs  types.rs  windows.rs
