[package]
name = "streamdeck-lib"
version = "0.3.0"
edition = "2024"
authors = ["veelume"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
file-rotate = "0.8.0"
num_enum = "0.7.4"
once_cell = "1.21.3"

reqwest = { version = "0.12.22", features = [
    "http2",
    "default-tls",
    "charset",
    "json",
    "stream",
] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
serde_repr = "0.1.20"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
thiserror = "2.0.14"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "json",
    "time",
] }

websocket = { version = "0.27.1", default-features = false, features = [
    "sync",
] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_UI_Input_KeyboardAndMouse"] }
